--- a/transform.css
+++ b/transform.css
@@ -11,7 +11,7 @@
 
 }
 .card:hover{
-  transform: scaleY(0.9);
+  transform: scale(0.9);
 }
 
 .images{
@@ -25,4 +25,10 @@
 .product{
   font-size: 25px;
   font-weight: 500;
+}
+.card-container{
+  /* width: 500px; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  
 }
